feat(deploy): target Railway — bind $PORT, add railway.json, refresh DEPLOY.md
Move the primary hosting target from Koyeb to Railway.

- Bind the platform-assigned $PORT (Railway/Fly) with a 9090 fallback so the
  container works on Railway's dynamic port without extra config.
- Add railway.json: Dockerfile builder + /api/build-info health check +
  on-failure restart policy. Building from the repo unlocks per-PR previews.
- Rewrite DEPLOY.md: Railway as the primary target, Koyeb removed. Also fix two
  Quarkus-migration leftovers in the doc — SPRING_PROFILES_ACTIVE -> QUARKUS_PROFILE
  for the Supabase profile, and the memory/GC section (SerialGC -> the actual
  ZGC + 768m/1536m/384m tuning from the Dockerfile).

No application code changes beyond the port property.

Claude-Session: https://claude.ai/code/session_01NytVURB4xMoabGoivEU7y1